--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "4.9.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint-config-prettier": "^2.6.0",
     "react-scripts": "^1.0.14"
   },
